Uploading finishing touches

--- a/virtual_demo/Bank_campaign_ML.ipynb
+++ b/virtual_demo/Bank_campaign_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1accfedc",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "import numpy as np\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import *\n",
-    "import seaborn as sns\n",
+    "#import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "55c9b1b5",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fd0d08f7",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "03f2a56a",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "45211"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "65dab522",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a9a5677d",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4f7073d0",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "4  unknown    5   may       198         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ae3fa47f",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7dfd3d88",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "4           NaN             NaN            NaN         NaN          NaN  no  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "63a3b0e3",
    "metadata": {},
    "outputs": [],
@@ -556,10 +556,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "41f2621b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>age</th>\n",
+       "      <th>job</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>housing</th>\n",
+       "      <th>loan</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>day</th>\n",
+       "      <th>month</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>emp_var_rate</th>\n",
+       "      <th>cons_price_idx</th>\n",
+       "      <th>cons_conf_idx</th>\n",
+       "      <th>euribor_3m</th>\n",
+       "      <th>nr_employed</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>58</td>\n",
+       "      <td>management</td>\n",
+       "      <td>married</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2143</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>261</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>44</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>single</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>29</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>151</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>33</td>\n",
+       "      <td>entrepreneur</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>47</td>\n",
+       "      <td>blue-collar</td>\n",
+       "      <td>married</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1506</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>92</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>33</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>single</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>198</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  age           job  marital  education default  balance housing loan  \\\n",
+       "0  2008   58    management  married   tertiary      no     2143     yes   no   \n",
+       "1  2008   44    technician   single  secondary      no       29     yes   no   \n",
+       "2  2008   33  entrepreneur  married  secondary      no        2     yes  yes   \n",
+       "3  2008   47   blue-collar  married    unknown      no     1506     yes   no   \n",
+       "4  2008   33       unknown   single    unknown      no        1      no   no   \n",
+       "\n",
+       "   contact  day month  duration  campaign  pdays  previous poutcome  \\\n",
+       "0  unknown    5   may       261         1     -1         0  unknown   \n",
+       "1  unknown    5   may       151         1     -1         0  unknown   \n",
+       "2  unknown    5   may        76         1     -1         0  unknown   \n",
+       "3  unknown    5   may        92         1     -1         0  unknown   \n",
+       "4  unknown    5   may       198         1     -1         0  unknown   \n",
+       "\n",
+       "   emp_var_rate  cons_price_idx  cons_conf_idx  euribor_3m  nr_employed   y  \n",
+       "0           NaN             NaN            NaN         NaN          NaN  no  \n",
+       "1           NaN             NaN            NaN         NaN          NaN  no  \n",
+       "2           NaN             NaN            NaN         NaN          NaN  no  \n",
+       "3           NaN             NaN            NaN         NaN          NaN  no  \n",
+       "4           NaN             NaN            NaN         NaN          NaN  no  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result_bankfull = year_mapper( data = pdf_1, start_yr = 2008)\n",
     "result_bankfull.head()"
@@ -567,10 +776,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ad33c844",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2008    27729\n",
+       "2009    14862\n",
+       "2010     2620\n",
+       "Name: year, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result_bankfull[\"year\"].value_counts()"
    ]
@@ -667,12 +890,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "503e6551",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_date(month, year, day_of_week_str):\n",
+    "def get_date2(month, year, day_of_week_str):\n",
     "    year = int(year)\n",
     "    \n",
     "    month_lst = [ \"haha\",\n",
@@ -696,7 +919,7 @@
     "\n",
     "\n",
     "\n",
-    "def map_date2(data):\n",
+    "def map_date(data):\n",
     "    # Make a copy of the original dataframe\n",
     "    new_data = data.copy()\n",
     "    \n",
@@ -719,21 +942,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2b76dfda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bank_full' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m res_full_date \u001b[38;5;241m=\u001b[39m map_date(data \u001b[38;5;241m=\u001b[39m \u001b[43mbank_full\u001b[49m)\n\u001b[0;32m      2\u001b[0m res_full_date\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'bank_full' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "res_full_date = map_date2(data = bank_full)\n",
+    "res_full_date = map_date(data = bank_full)\n",
     "res_full_date.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "063566b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'res_full_date' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mres_full_date\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'res_full_date' is not defined"
+     ]
+    }
+   ],
    "source": [
     "res_full_date.info()"
    ]
@@ -931,9 +1178,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import calendar\n",
+    "\n",
     "\n",
     "def get_date(month, year, day_of_week_str):\n",
+    "    import calendar\n",
     "    year = int(year)\n",
     "    \n",
     "    month_lst = [ \"haha\",\n",
@@ -956,7 +1204,7 @@
     "    return None\n",
     "\n",
     "\n",
-    "def map_date(data):\n",
+    "def map_date2(data):\n",
     "    # Make a copy of the original dataframe\n",
     "    new_data = data.copy()\n",
     "    \n",
@@ -988,7 +1236,7 @@
    },
    "outputs": [],
    "source": [
-    "res_add_date = map_date(data=result_addition)\n",
+    "res_add_date = map_date2(data=result_addition)\n",
     "res_add_date.head()"
    ]
   },
