--- a/virtual_demo/preprocessing_3_2_1_jupy.ipynb
+++ b/virtual_demo/preprocessing_3_2_1_jupy.ipynb
@@ -569,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def year_mapper(data, start_yr):\n",
+    "def year_mapper(data, start_yr, break_yr):\n",
     "    month_lst = [\"jan\", \"feb\", \"mar\", \"apr\", \"may\", \"jun\", \"jul\", \"aug\", \"sep\", \"oct\", \"nov\", \"dec\"]\n",
     "\n",
     "    # Make a copy of the original dataframe\n",
@@ -591,7 +591,7 @@
     "        new_data.at[i, \"year\"] = current_year\n",
     "\n",
     "        # If the current year exceeds the end year, break out of the loop\n",
-    "        if current_year > 2010:\n",
+    "        if current_year > break_yr:\n",
     "            break\n",
     "\n",
     "    return new_data"
