--- a/virtual_demo/date_map_colab_32_2.ipynb
+++ b/virtual_demo/date_map_colab_32_2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "803a22aa",
    "metadata": {
     "id": "803a22aa"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "fe7ec320",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
        "[41188 rows x 22 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "dfce4896",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "28db31fa",
    "metadata": {},
    "outputs": [
@@ -816,7 +816,7 @@
        " 'December']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "6fb6ff72",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "117546e5",
    "metadata": {},
    "outputs": [],
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "d828eaf1",
    "metadata": {},
    "outputs": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "bc8d0e99",
    "metadata": {},
    "outputs": [],
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "b043f4f2",
    "metadata": {},
    "outputs": [],
@@ -961,12 +961,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
+   "id": "f4945f62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>job</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>housing</th>\n",
+       "      <th>loan</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>date</th>\n",
+       "      <th>year</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>emp.var.rate</th>\n",
+       "      <th>cons.price.idx</th>\n",
+       "      <th>cons.conf.idx</th>\n",
+       "      <th>euribor3m</th>\n",
+       "      <th>nr.employed</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>housemaid</td>\n",
+       "      <td>married</td>\n",
+       "      <td>basic.4y</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>2008-5-05</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>261</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>57</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>2008-5-05</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>149</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>2008-5-05</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>226</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40</td>\n",
+       "      <td>admin.</td>\n",
+       "      <td>married</td>\n",
+       "      <td>basic.6y</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>2008-5-05</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>151</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>2008-5-05</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>307</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age        job  marital    education  default housing loan    contact  \\\n",
+       "0   56  housemaid  married     basic.4y       no      no   no  telephone   \n",
+       "1   57   services  married  high.school  unknown      no   no  telephone   \n",
+       "2   37   services  married  high.school       no     yes   no  telephone   \n",
+       "3   40     admin.  married     basic.6y       no      no   no  telephone   \n",
+       "4   56   services  married  high.school       no      no  yes  telephone   \n",
+       "\n",
+       "  month day_of_week       date  year  duration  campaign  pdays  previous  \\\n",
+       "0   may         mon  2008-5-05  2008       261         1    999         0   \n",
+       "1   may         mon  2008-5-05  2008       149         1    999         0   \n",
+       "2   may         mon  2008-5-05  2008       226         1    999         0   \n",
+       "3   may         mon  2008-5-05  2008       151         1    999         0   \n",
+       "4   may         mon  2008-5-05  2008       307         1    999         0   \n",
+       "\n",
+       "      poutcome  emp.var.rate  cons.price.idx  cons.conf.idx  euribor3m  \\\n",
+       "0  nonexistent           1.1          93.994          -36.4      4.857   \n",
+       "1  nonexistent           1.1          93.994          -36.4      4.857   \n",
+       "2  nonexistent           1.1          93.994          -36.4      4.857   \n",
+       "3  nonexistent           1.1          93.994          -36.4      4.857   \n",
+       "4  nonexistent           1.1          93.994          -36.4      4.857   \n",
+       "\n",
+       "   nr.employed   y  \n",
+       "0       5191.0  no  \n",
+       "1       5191.0  no  \n",
+       "2       5191.0  no  \n",
+       "3       5191.0  no  \n",
+       "4       5191.0  no  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_add_date.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "9fac7372",
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_add_date.to_csv(\"./res_add_date.csv\")"
+    "#res_add_date.to_csv(\"./res_add_date.csv\")"
    ]
   },
   {
@@ -979,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "74f30ed6",
    "metadata": {},
    "outputs": [],
@@ -989,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "b7f13003",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1380,7 @@
        "4  unknown    5   may       198         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "id": "dcd039bc",
    "metadata": {},
    "outputs": [],
@@ -1175,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 25,
    "id": "2863a020",
    "metadata": {},
    "outputs": [
@@ -1463,7 +1689,7 @@
        "[45211 rows x 16 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
