MongoDB connectivity established

--- a/virtual_demo/ProjectRun/Spark_Bank_Campaign - Copy - 3_12_1.ipynb
+++ b/virtual_demo/ProjectRun/Spark_Bank_Campaign - Copy - 3_12_1.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "25146802",
    "metadata": {},
    "outputs": [
@@ -94,17 +94,21 @@
       "\n",
       " Directory of D:\\Lemonrice\\virtual_demo\\ProjectRun\n",
       "\n",
-      "12/03/2023  11:18    <DIR>          .\n",
-      "12/03/2023  11:18    <DIR>          ..\n",
-      "12/03/2023  11:17    <DIR>          .ipynb_checkpoints\n",
+      "13/03/2023  15:09    <DIR>          .\n",
+      "13/03/2023  15:09    <DIR>          ..\n",
+      "12/03/2023  11:19    <DIR>          .ipynb_checkpoints\n",
       "10/03/2023  08:52         5,834,924 bank-additional-full.csv\n",
       "10/03/2023  08:52             5,458 bank-additional-names.txt\n",
       "10/03/2023  08:52         4,610,348 bank-full.csv\n",
       "12/03/2023  11:18           927,049 bank-telemarketing-dataset.zip\n",
+      "12/03/2023  11:23           848,847 bank_data_pdf.parquet\n",
       "10/03/2023  08:52                94 info.txt\n",
-      "12/03/2023  11:09            53,604 Spark_Bank_Campaign - Copy - 3_12_1.ipynb\n",
-      "               6 File(s)     11,431,477 bytes\n",
-      "               3 Dir(s)  75,674,648,576 bytes free\n"
+      "13/03/2023  11:27           668,810 Predicting Customer Conversion on Bank Telemarketing Dataset using ML.pptx\n",
+      "13/03/2023  15:07           593,771 Project Report.pdf\n",
+      "12/03/2023  17:03           417,482 res_full2.twbx\n",
+      "12/03/2023  11:43           530,027 Spark_Bank_Campaign - Copy - 3_12_1.ipynb\n",
+      "              10 File(s)     14,436,810 bytes\n",
+      "               3 Dir(s)  57,435,492,352 bytes free\n"
      ]
     }
    ],
@@ -130,10 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "705bd23d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ganer\\AppData\\Roaming\\Python\\Python39\\site-packages\\pyspark\\pandas\\__init__.py:49: UserWarning: 'PYARROW_IGNORE_TIMEZONE' environment variable was not set. It is required to set this environment variable to '1' in both driver and executor sides if you use pyarrow>=2.0.0. pandas-on-Spark will set it for you but it does not work if there is a Spark context already launched.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -150,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "f8523fe6",
    "metadata": {},
    "outputs": [],
@@ -161,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c5390a6f",
    "metadata": {},
    "outputs": [],
@@ -172,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "ea0b572b",
    "metadata": {},
    "outputs": [],
@@ -199,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "36bc5d86",
    "metadata": {},
    "outputs": [],
@@ -210,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "588df899",
    "metadata": {},
    "outputs": [
@@ -220,7 +233,7 @@
        "45211"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "4b019844",
    "metadata": {},
    "outputs": [
@@ -269,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "13f2767a",
    "metadata": {},
    "outputs": [
@@ -305,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "58c29062",
    "metadata": {},
    "outputs": [],
@@ -319,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "6d07a3ac",
    "metadata": {},
    "outputs": [
@@ -357,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "9213fb63",
    "metadata": {},
    "outputs": [],
@@ -398,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "4636c585",
    "metadata": {},
    "outputs": [],
@@ -424,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "1ac9ddef",
    "metadata": {},
    "outputs": [
@@ -462,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "cf1c4c40",
    "metadata": {},
    "outputs": [
@@ -495,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "618b6a7c",
    "metadata": {},
    "outputs": [],
@@ -550,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "0ce9ec22",
    "metadata": {},
    "outputs": [
@@ -590,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "7be8e28c",
    "metadata": {},
    "outputs": [
@@ -632,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "ab121bb1",
    "metadata": {},
    "outputs": [],
@@ -643,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "9b96876b",
    "metadata": {},
    "outputs": [],
@@ -654,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "bd769970",
    "metadata": {},
    "outputs": [
@@ -850,7 +863,7 @@
        "4          93.994          -36.4        4.85       5191.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "a5bddbbb",
    "metadata": {},
    "outputs": [],
@@ -879,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "2a348f2d",
    "metadata": {},
    "outputs": [],
@@ -890,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "c7c8a383",
    "metadata": {},
    "outputs": [
@@ -900,7 +913,7 @@
        "41188"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "c59e7804",
    "metadata": {},
    "outputs": [
@@ -949,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "503ab48e",
    "metadata": {},
    "outputs": [],
@@ -981,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "1a5d7376",
    "metadata": {},
    "outputs": [],
@@ -1000,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "f9a230d6",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "a19d60eb",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "e487edd1",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "6a8b90b4",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "22410925",
    "metadata": {},
    "outputs": [],
@@ -1117,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "fb7d988d",
    "metadata": {},
    "outputs": [],
@@ -1127,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "8ae0c4a9",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "933c154f",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "537d1d9c",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1367,7 @@
        "4          93.994          -36.4        4.85       5191.0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "3b76a003",
    "metadata": {},
    "outputs": [],
@@ -1376,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "d4d7fc65",
    "metadata": {},
    "outputs": [],
@@ -1388,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "9e23ede6",
    "metadata": {},
    "outputs": [],
@@ -1399,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "id": "1e3a7488",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "id": "61e67210",
    "metadata": {},
    "outputs": [
@@ -1478,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "id": "434c3282",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1501,7 @@
        "86399"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "id": "2420e529",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1546,7 @@
        "+-------+------------------+------------------+-------+--------+---------+-------+-------+-----+--------+-----+------------------+-----------------+-----------------+------------------+--------+-----+------------------+------------------+------------------+------------------+-----------------+------------------+"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "id": "41e1399b",
    "metadata": {},
    "outputs": [],
@@ -1567,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "id": "8b6b21ab",
    "metadata": {},
    "outputs": [
@@ -1756,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "id": "4da98fd0",
    "metadata": {},
    "outputs": [],
@@ -1767,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "id": "21f8b418",
    "metadata": {},
    "outputs": [],
@@ -1779,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "id": "e5d4abf6",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "id": "aaa5a30b",
    "metadata": {},
    "outputs": [
@@ -1849,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "id": "15dc7689",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 51,
    "id": "809bfbce",
    "metadata": {},
    "outputs": [],
@@ -1897,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "id": "1e0a4afc",
    "metadata": {},
    "outputs": [
@@ -1929,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "id": "380bd5b8",
    "metadata": {},
    "outputs": [],
@@ -1939,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "id": "772755e2",
    "metadata": {},
    "outputs": [],
@@ -1953,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "id": "df7192b6",
    "metadata": {},
    "outputs": [
@@ -1977,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "id": "e9af1cee",
    "metadata": {},
    "outputs": [],
@@ -1995,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "id": "a1ff1920",
    "metadata": {},
    "outputs": [
@@ -2005,7 +2018,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2028,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "id": "49b4f9a0",
    "metadata": {},
    "outputs": [
@@ -2076,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "id": "48aa89ac",
    "metadata": {},
    "outputs": [],
@@ -2092,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "id": "789f1a8f",
    "metadata": {},
    "outputs": [],
@@ -2106,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "id": "5ece43c9",
    "metadata": {},
    "outputs": [],
@@ -2121,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 62,
    "id": "532d32ab",
    "metadata": {},
    "outputs": [],
@@ -2134,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 63,
    "id": "7fb0ead7",
    "metadata": {},
    "outputs": [
@@ -2172,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "id": "dd910b4b",
    "metadata": {},
    "outputs": [],
@@ -2187,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 65,
    "id": "646678d5",
    "metadata": {},
    "outputs": [
@@ -2227,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "id": "267a14bd",
    "metadata": {},
    "outputs": [],
@@ -2245,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 67,
    "id": "53283a0c",
    "metadata": {},
    "outputs": [],
@@ -2265,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 68,
    "id": "5dfd7b5a",
    "metadata": {},
    "outputs": [],
@@ -2292,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 69,
    "id": "4160fd88",
    "metadata": {
     "scrolled": true
@@ -2332,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 70,
    "id": "2da27886",
    "metadata": {},
    "outputs": [
@@ -2374,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 71,
    "id": "2c0df333",
    "metadata": {},
    "outputs": [],
@@ -2384,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 72,
    "id": "67041655",
    "metadata": {},
    "outputs": [],
@@ -2402,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 73,
    "id": "d384550d",
    "metadata": {},
    "outputs": [
@@ -2424,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 74,
    "id": "95313136",
    "metadata": {},
    "outputs": [],
@@ -2436,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 75,
    "id": "5d592827",
    "metadata": {},
    "outputs": [
@@ -2474,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 76,
    "id": "92c3e16d",
    "metadata": {},
    "outputs": [
@@ -2523,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 77,
    "id": "ea070837",
    "metadata": {},
    "outputs": [],
@@ -2533,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 78,
    "id": "71b422e2",
    "metadata": {},
    "outputs": [],
@@ -2543,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 79,
    "id": "b391950e",
    "metadata": {},
    "outputs": [
@@ -2582,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 80,
    "id": "a9569e01",
    "metadata": {},
    "outputs": [
@@ -2623,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 81,
    "id": "6ae7f545",
    "metadata": {},
    "outputs": [],
@@ -2635,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 82,
    "id": "838141e7",
    "metadata": {},
    "outputs": [],
@@ -2645,7 +2658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 83,
    "id": "9c949e1b",
    "metadata": {},
    "outputs": [
@@ -2666,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 84,
    "id": "eeb9e074",
    "metadata": {},
    "outputs": [
@@ -2715,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 85,
    "id": "8a61a158",
    "metadata": {},
    "outputs": [],
@@ -2725,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 86,
    "id": "038b8abb",
    "metadata": {},
    "outputs": [
@@ -2759,6 +2772,40 @@
    ],
    "source": [
     "display(bank.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "49de1604",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "|  y|count|\n",
+      "+---+-----+\n",
+      "|0.0|76470|\n",
+      "|1.0| 9929|\n",
+      "+---+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bank.groupBy(\"y\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2516b95",
+   "metadata": {},
+   "source": [
+    "*OBSERVATION :* <br>\n",
+    "We have excess count of 0 i.e. (no) in 'y'so the dataset is imblanced. <br>\n",
+    "Hence, we are going for oversampling of yes"
    ]
   },
   {
